terraform/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-app
  labels:
    name: user-app
